--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -84,8 +84,12 @@ header a{
     width: 200px;
     display: flex;
     flex: 1 1;
-        border: 10px solid var(--purple);
-    }
+    border: 10px solid var(--purple);
+}
+
+#about-me p{
+    font-size: larger;
+}
 
 /* my work formatting */
 #my-work {
@@ -95,16 +99,16 @@ header a{
 
 #my-work h2 {
     padding-right: 20px;    
-    border-right: 5px solid var(--purple);
+    border-right: 10px solid var(--purple);
     text-align: right;
-    flex: 0 0 25%;
+    flex: 1 1 25%;
 }
 
 #my-work .sample {
-    flex: 0 0 75%;
+    flex: 2 2 75%;
     padding-left: 20px;
-    font-size: 20px;
-    margin-left: -28px;
+    margin-left: -33px;
+    justify-content: center;
 }
 
 /* main focus work formatting */
@@ -114,50 +118,81 @@ header a{
     justify-content: center;
 }
 
-#Big-Work img{
-    display: flex;
-    height: 500px;
+#Big-Work .img{
+    object-fit: cover;
+    width: 100%;
+    height: auto;
 }
 
+/* other work formatting */
 #small-work {
     display: flex;  
     flex-wrap: wrap;
     justify-content: space-evenly;
-    flex: 0 0 50%;
 }   
 
+#small-work img {
+    height: 200px;
+    width: 400px;
+}
+
+.work img {
+    border: 10px solid var(--purple);
+}
+
+/* footer formatting */
 footer {
     color: var(--black);   
     display: flex;
+    flex-direction: column;
+    align-items: center;
 }
 
 footer li {
     display: inline-flex;
-    align-items: baseline;
-    margin: 10px;  
+    align-items: center;
+    margin: 5px;  
 }
 
 footer img{
     height:30px;
 }
 
-
-
 footer a {
     color: var(--black);
 }
 
+
+/* media screen formatting */
 @media screen and (max-width: 856px) {
     header  {
       flex-direction: column;   
     }
-  }
+
+    #my-work {
+        flex-direction: column;
+    }
+
+    #my-work h2 {
+        padding-bottom: 20px;    
+        border: 0;
+        border-bottom: 10px solid var(--purple);
+        text-align: center;
+        flex: 0 0 25%;
+    }
+}
   
-  @media screen and (max-width: 562px) {
+@media screen and (max-width: 562px) {
     .nav li  {
         display: flex;
         flex-direction: column;   
         justify-content: center;
     }
-  }
-  
+
+    #small-work {
+        display: flex;  
+        flex-direction: column;
+        justify-content: space-evenly;
+        align-items: center;
+    }
+}
